# WindGym

./: .gitlab-ci.yml  .pre-commit-config.yaml  CONFIGURATION_GUIDE.md  DERATING_FEATURE.md  README.md  pyproject.toml  test_derating.py
.github/workflows/: draft-pdf.yml
WindGym/: AgentEval.py  FarmEval.py  Measurement_Manager.py  MesClass.py  WindEnv.py  WindEnvMulti.py  Wind_Farm_Env.py  __init__.py  agent_eval.py  config_schema.py  farm_eval.py  measurement_manager.py  mes_class.py  reward_calculator.py  utils.py  wind_env.py  wind_env_multi.py  wind_farm_env.py
WindGym/Agents/: BaseAgent.py  PyWakeAgent.py  __init__.py  base_agent.py  constant_agent.py  greedy_agent.py  pywake_agent.py  random_agent.py
WindGym/BasicControllers/: __init__.py  (+1 more)
assets/: paper.bib  paper.md
docusaurus-site/: docusaurus.config.js  package.json  sidebars.js
examples/: Example 1 Make environment.ipynb  Example 2 Evaluate pretrained agent.ipynb  README.md  compare_agents.py  compare_agents_grid.py  compare_agents_sampling.py  curriculum.py  example_with_noise.py  longer_steps_example.py  ppo_curriculum_example.py  pywake_adversary.py  pywake_agent_with_noise.py
tests/: conftest.py  test_MesClass.py  test_agent_eval.py  test_agents.py  test_baseline_controllers.py  test_basics.py  test_buffer.py  test_colesium.py  test_config_loading.py  test_curriculum_wrapper.py  test_determinism.py  test_env_reward_functions.py  test_env_yaml_loading.py  test_environment_initialization_and_compliance.py  test_features.py  test_generate_layouts.py  test_hawc2_integration.py  test_invalid_configurations_raise_exceptions.py  test_mes_class.py  test_multi_env.py  test_noisy_pywake.py  test_power_wrapper.py  test_pywake_agent.py  test_record_episode_vals.py  test_refactored_agent_eval.py  test_renderer.py  test_reward_calculator.py  test_ti_calculation.py  test_turbulent_loading.py  test_wind_probe.py  test_windfarmenv_configs.py
(+75 files in other folders)
