[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WindGym"
authors = [
  { name="Marcus Nilsen", email="manils@dtu.dk" },
  { name="Julian Quick", email="juqu@dtu.dk" },
  { name="Ernestas Simutis", email="ernim@dtu.dk" },
]
description = "Wind farm reinforcement learning environment"
readme = "README.md"
version = "0.0.2"
requires-python = ">=3.7, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "gymnasium",
  "stable_baselines3",
  "hipersim>=0.1.7",
  "dynamiks @ git+https://gitlab.windenergy.dtu.dk/DYNAMIKS/dynamiks.git@77f4f875c6401fde150e351a60143a5b522cf950",
  "pettingzoo",
  "wetb",
  "IPython"
]

[project.urls]
"Homepage" = "https://gitlab.windenergy.dtu.dk/sys/windgym"
"Bug Tracker" = "https://gitlab.windenergy.dtu.dk/sys/windgym/-/issues"

[project.optional-dependencies]
hawc2 = ["h2lib", "wetb"]

[tool.setuptools]
packages = ["WindGym"]

[tool.setuptools_scm]
version_file = "WindGym/version.py"
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov-report term-missing:skip-covered --cov=WindGym"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
WindGym = { path = ".", editable = true }

[tool.pixi.dependencies]
hdf5 = "*"
h5py = "*"
netcdf4 = "*"
numpy = "<2"
pre-commit = ">=4.0.1,<5"
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
gymnasium-all = ">=1.0.0,<2"
xarray = ">=2022.0.0,<2025"
pytz = ">=2025.1,<2026"

[tool.pixi.tasks]
install = { cmd = "pip install -e ." }
test = { depends-on = ["install"], cmd = "pytest" }
